feat: adding readme
